# otus_1

./: .travis.yml  CMakeLists.txt  README.md  boost_test_version.cpp  gtest_test_version.cpp  otus_1.cpp
Otus_1/: CMakeLists.txt  test_version.cpp
Otus_1/Otus_1/: .travis.yml  CMakeLists.txt  Otus_1.cpp  test_version.cpp  version.cpp
